--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo": "53.0.11",
     "expo-constants": "~17.1.6",
     "expo-linking": "~7.1.4",
+    "expo-notifications": "~0.31.4",
     "expo-router": "~5.0.6",
     "expo-secure-store": "~14.2.3",
     "expo-status-bar": "~2.2.3",
@@ -24,12 +25,18 @@
     "react-native-dotenv": "^3.4.11",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "react-native-svg": "15.11.2",
-    "expo-notifications": "~0.31.4"
+    "react-native-svg": "15.11.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
+    "@wdio/appium-service": "^9.16.2",
+    "@wdio/cli": "^9.16.2",
+    "@wdio/local-runner": "^9.16.2",
+    "@wdio/mocha-framework": "^9.16.2",
+    "@wdio/spec-reporter": "^9.16.2",
+    "@wdio/visual-service": "^8.0.4",
+    "appium-uiautomator2-driver": "^4.2.5",
     "typescript": "~5.8.3"
   },
   "private": true
